--- a/build.xml
+++ b/build.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <project name="SermonUploader" default="build" basedir=".">
+  <path id="project.class.path">
+    <fileset dir="lib" includes="**/*.jar"/>
+  </path>
+
   <target name="javac" description="Compile java source to bytecode">
     <mkdir dir="build"/>
     <javac srcdir="src" includes="**" encoding="utf-8"
         destdir="build"
         source="1.5" target="1.5" nowarn="true"
         debug="true" debuglevel="lines,vars,source">
+       <classpath refid="project.class.path"/>
     </javac>
     <copy todir="build">
       <fileset dir="src" excludes="**/*.java"/>
@@ -17,6 +22,13 @@
   <target name="jar" depends="build" description="Create a jar file">
     <jar destfile="SermonUploader.jar">
        <fileset dir="build" />
+       <restrict>
+          <archives>
+             <zips>
+                <fileset dir="lib" includes="**/*.jar" />
+             </zips>
+         </archives>
+       </restrict>
        <manifest>
           <attribute name="Main-Class" value="net.jesterpm.sermonuploader.SermonUploader" />
        </manifest>
